syntax = "proto3";

option java_package = "com.jkuester.unlauncher.datastore";
option java_multiple_files = true;

message CorePreferences {
  bool activate_keyboard_in_drawer = 1;
  bool keep_device_wallpaper = 2;
  optional bool show_search_bar = 3;
  SearchBarPosition search_bar_position = 4;
  bool show_drawer_headings = 5;
  bool search_all_apps_in_drawer = 6;
  optional ClockType clock_type = 7;
  AlignmentFormat alignment_format = 8;
}

enum SearchBarPosition {
  top = 0;
  bottom = 1;
}

enum ClockType {
  none = 0;
  digital = 1;
  analog_12 = 2;
  binary = 3;
  analog_0 = 4;
  analog_1 = 5;
  analog_2 = 6;
  analog_3 = 7;
  analog_4 = 8;
  analog_6 = 9;
  analog_60 = 10;
}

enum MyDateFormat {
  date_system = 0;
  date_none = 1;
  date_short = 2;
  date_medium = 3;
  date_iso = 4;
  date_iso_wday = 5;
  date_wday = 6;
}

enum AlignmentFormat {
  left = 0;
  center = 1;
  right = 2;
}
